Implements consultation
